[project]
name = "ruv"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
dependencies = [
    "babel>=2.12.1",
    "httpx>=0.24.1",
    "jinja2>=3.1.2",
    "pydantic>=2.3.0",
    "starlette>=0.31.1",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.pyright.analysis]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"
