[tool.poetry]
name = "dagskra"
version = "0.1.0"
description = ""
authors = ["Paul Burt <paul.burt@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
babel = "^2.14.0"
jinja2 = "^3.1.2"
httpx = "^0.25.2"
pydantic = "^2.5.2"
starlette = "^0.33.0"
uvicorn = "^0.24.0.post1"


[tool.black]
line-length = 100

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.pyright.analysis]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
