[tool.poetry]
name = "dagskra"
version = "0.1.0"
description = "What's on Icelandic TV today"
authors = ["Paul Burt <paul.burt@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
babel = "^2.14.0"
httpx = "^0.25.2"
jinja2 = "^3.1.3"
pydantic = "^2.5.2"
starlette = "^0.33.0"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.13"
ruff-lsp = "^0.0.49"

[tool.black]
line-length = 88

[tool.pyright]
venv = ".venv"
venvPath = "."

[tool.pyright.analysis]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
